lib/app/drv/lib/Ubuntu/vega3000/PlusPosConnector.h


typedef char CHAR;

typedef int                 BOOL;

/*=====================================================
	PlusPosConnector.h
	Version 1.0	2017-03-31
=====================================================*/
/*-----------------------------------------------------
	HeaderData	共通ヘッダ
-----------------------------------------------------*/
typedef struct	_HeaderData {
	CHAR	BusinessCode		[ 4];	// 業務コード
	char	BusinessSubCode;			// 業務サブコード
	CHAR	ProcessDate			[ 7];	// 処理日付
	CHAR	ProcessTime			[ 7];	// 処理時刻
	CHAR	TerminalID			[14];	// 端末識別番号
	CHAR	SlipNumber			[ 6];	// 端末処理通番
	char	TerminalType;				// 端末識別区分
	CHAR	ExtraA0				[ 9];	// 予備
	CHAR	OperatorCode		[ 6];	// 担当者コード
	CHAR	Memo1				[11];	// メモ１
	CHAR	Memo2				[11];	// メモ２
	char	TestModeFlag;				// TESTモードフラグ
	CHAR	ExtraA1				[11];	// 予備
	char	ProcessingResult;	// 処理結果
	CHAR	ErrorCode			[ 4];	// エラーコード
	CHAR	Message1			[24];	// メッセージ１
	CHAR	Message2			[24];	// メッセージ２
	CHAR	ResponseCode		[ 5];	// レスポンスコード
	char	DllFlag;					// ＤＬＬフラグ
	CHAR	ExtraA2				[11];	// 予備
}	HeaderData;

/*-----------------------------------------------------
	CardData	カードデータ
-----------------------------------------------------*/
typedef struct	_CardData {
	char	Type;			// カード利用区分
	CHAR	CardData1	[38];	// JIS1カード情報
	CHAR	CardData2	[70];	// JIS2カード情報
}	CardData;


/*-----------------------------------------------------
	Config	接続先設定
-----------------------------------------------------*/
typedef struct	_Config {
	BOOL			SvFlag;				// 内部処理用フラグ：サブサーバの有無フラグ
	BOOL			SwFlag;				// 内部処理用フラグ：サブサーバへ切り替え中フラグ
	CHAR			Address		[16];	// 接続先サーバIP
	CHAR			AddressSub	[16];	// 接続先サブサーバIP
	unsigned int	Port;				// 接続先サーバPort
	unsigned int	PortSub;			// 接続先サブサーバPort
	unsigned int	RecvTimeOut;		// 電文受信待ち時間(sec)
	unsigned int	ConnTimeOut;		// コネクション取得待ち時間(sec)
	int				RetryCount;			// コネクションリトライ回数[*********未使用***************]
	BOOL			LogFlag;			// ログ出力判定フラグ
	CHAR			LogFilePath [128];	// ログ出力先フォルダ：指定無の場合カレントフォルダに出力
	int				LogSaveDate;		// ログ保存日数：0指定の場合無制限
	BOOL			DevFlag;			// 開発用 DLL内部折返しフラグ
	BOOL			TrainingModeFlag;	// トレーニングモードフラグ[POS連動用]
	CHAR			ComNo[24];		// シリアルポート名：Windowsの場合"COM1"等、Linuxの場合"/dev/ttyS1"等[POS連動用]
}	Config;


/*-----------------------------------------------------
	★MscParam	MSカード
-----------------------------------------------------*/
typedef	struct	_PosMsParam{
	HeaderData		Header;
	CardData		Card;
}	PosMsParam;


/*-----------------------------------------------------
	★CgcParam	CoGCa
-----------------------------------------------------*/
typedef	struct	_PosCoGCaParam{
	HeaderData		Header;
	CardData		Card;
}	PosCoGCaParam;

	// MSカード
	BOOL WINAPI startPlusPosMsRead (PosMsParam *Param, Config *Conf);

	BOOL WINAPI PlusPosMsRead (PosMsParam *Param, Config *Conf);

	BOOL WINAPI endPlusPosMsRead (PosMsParam *Param, Config *Conf);

	// CoGCa
	BOOL WINAPI startPlusPosCoGCaRead (PosCoGCaParam *Param, Config *Conf);

	BOOL WINAPI PlusPosCoGCaRead (PosCoGCaParam *Param, Config *Conf);

	BOOL WINAPI endPlusPosCoGCaRead (PosCoGCaParam *Param, Config *Conf);



	BOOL WINAPI PlusPosRegisterCancelCallback(BOOL (*C)(void), Config* conf);