lib/app/drv/ffi/ubuntu/ffi_vega3000.dart


    //外部関数（インターフェース）
    if (!isWithoutDevice()) {
      // PlusPosConnector.hに定義してある構造体のサイズ分領域確保
      Pointer<PosMsParamStruct> msParamStruct = calloc.allocate(posMsParamSize);
      Pointer<ConfigStruct> vegaConfStruct = calloc.allocate(configSize);
      cnvPosMsParamToStruct(msParam, msParamStruct);
      cnvConfigToStruct(vegaConf, vegaConfStruct);

      final bool Function(
              Pointer<PosMsParamStruct> msParam, Pointer<ConfigStruct> vegaConf)
          interface = vega3000Dylib
              .lookup<
                  NativeFunction<
                      Bool Function(Pointer<PosMsParamStruct>,
                          Pointer<ConfigStruct>)>>("startPlusPosMsRead")
              .asFunction();
      //APIコール
      result = interface(msParamStruct, vegaConfStruct);
      cnvHeaderDataOutPut(msParamStruct.ref.header, msParam.header);
      cnvCardDataOutPut(msParamStruct.ref.card, msParam.card);
      cnvConfigOutPut(vegaConfStruct.ref, vegaConf);

      calloc.free(msParamStruct);
      calloc.free(vegaConfStruct);
    } else {
      debugPrint(
          "FFIVega3000.startPlusPosMsRead() -- interface() WITHOUT_DEVICE実行");
      result = true;
    }
    return (result);
  }

  /// 関数：plusPosMsRead()
  /// 機能：MSカード読取 処理実行
  /// 引数：PosMsParam msParam
  ///     ：Config vegaConf
  /// 戻値：false:通信が正常終了しなかった true:通信が正常終了
  bool plusPosMsRead(PosMsParam msParam, Config vegaConf) {
    bool result;

    //外部関数（インターフェース）
    if (!isWithoutDevice()) {
      // PlusPosConnector.hに定義してある構造体のサイズ分領域確保
      Pointer<PosMsParamStruct> msParamStruct = calloc.allocate(posMsParamSize);
      Pointer<ConfigStruct> vegaConfStruct = calloc.allocate(configSize);
      cnvPosMsParamToStruct(msParam, msParamStruct);
      cnvConfigToStruct(vegaConf, vegaConfStruct);

      final bool Function(
              Pointer<PosMsParamStruct> msParam, Pointer<ConfigStruct> vegaConf)
          interface = vega3000Dylib
              .lookup<
                  NativeFunction<
                      Bool Function(Pointer<PosMsParamStruct>,
                          Pointer<ConfigStruct>)>>("PlusPosMsRead")
              .asFunction();
      //APIコール
      result = interface(msParamStruct, vegaConfStruct);
      cnvHeaderDataOutPut(msParamStruct.ref.header, msParam.header);
      cnvCardDataOutPut(msParamStruct.ref.card, msParam.card);
      cnvConfigOutPut(vegaConfStruct.ref, vegaConf);

      calloc.free(msParamStruct);
      calloc.free(vegaConfStruct);
    } else {
      debugPrint("FFIVega3000.plusPosMsRead() -- interface() WITHOUT_DEVICE実行");
      result = true;
    }
    return (result);
  }

  /// 関数：endPlusPosMsRead()
  /// 機能：MSカード読取 処理終了
  /// 引数：PosMsParam msParam
  ///     ：Config vegaConf
  /// 戻値：false:通信が正常終了しなかった true:通信が正常終了
  bool endPlusPosMsRead(PosMsParam msParam, Config vegaConf) {
    bool result;

    //外部関数（インターフェース）
    if (!isWithoutDevice()) {
      // PlusPosConnector.hに定義してある構造体のサイズ分領域確保
      Pointer<PosMsParamStruct> msParamStruct = calloc.allocate(posMsParamSize);
      Pointer<ConfigStruct> vegaConfStruct = calloc.allocate(configSize);
      cnvPosMsParamToStruct(msParam, msParamStruct);
      cnvConfigToStruct(vegaConf, vegaConfStruct);

      final bool Function(
              Pointer<PosMsParamStruct> msParam, Pointer<ConfigStruct> vegaConf)
          interface = vega3000Dylib
              .lookup<
                  NativeFunction<
                      Bool Function(Pointer<PosMsParamStruct>,
                          Pointer<ConfigStruct>)>>("endPlusPosMsRead")
              .asFunction();

      //APIコール
      result = interface(msParamStruct, vegaConfStruct);
      cnvHeaderDataOutPut(msParamStruct.ref.header, msParam.header);
      cnvCardDataOutPut(msParamStruct.ref.card, msParam.card);
      cnvConfigOutPut(vegaConfStruct.ref, vegaConf);

      calloc.free(msParamStruct);
      calloc.free(vegaConfStruct);
    } else {
      debugPrint(
          "FFIVega3000.endPlusPosMsRead() -- interface() WITHOUT_DEVICE実行");
      result = true;
    }
    return (result);
  }

// CoGCa
  /// 関数：startPlusPosCoGCaRead()
  /// 機能：CoGCaカード読取 構造体初期化
  /// 引数：PosCoGCaParam cogcaParam
  ///     ：Config vegaConf
  /// 戻値：false:初期化、通信が正常終了しなかった true:初期化、通信が正常終了
  bool startPlusPosCoGCaRead(PosCoGCaParam cogcaParam, Config vegaConf) {
    bool result;

    //外部関数（インターフェース）
    if (!isWithoutDevice()) {
      // PlusPosConnector.hに定義してある構造体のサイズ分領域確保
      Pointer<PosCoGCaParamStruct> cogcaParamStruct = calloc.allocate(posCoGCaParamSize);
      Pointer<ConfigStruct> vegaConfStruct = calloc.allocate(configSize);
      // 構造体へ変換
      cnvPosCoGCaParamToStruct(cogcaParam, cogcaParamStruct);
      cnvConfigToStruct(vegaConf, vegaConfStruct);

      final bool Function(Pointer<PosCoGCaParamStruct> cogcaParam,
              Pointer<ConfigStruct> vegaConf) interface =
          vega3000Dylib
              .lookup<
                  NativeFunction<
                      Bool Function(Pointer<PosCoGCaParamStruct>,
                          Pointer<ConfigStruct>)>>("startPlusPosCoGCaRead")
              .asFunction();
      //APIコール
      result = interface(cogcaParamStruct, vegaConfStruct);
      cnvHeaderDataOutPut(cogcaParamStruct.ref.header, cogcaParam.header);
      cnvCardDataOutPut(cogcaParamStruct.ref.card, cogcaParam.card);
      cnvConfigOutPut(vegaConfStruct.ref, vegaConf);

      calloc.free(cogcaParamStruct);
      calloc.free(vegaConfStruct);
    } else {
      debugPrint(
          "FFIVega3000.startPlusPosCoGCaRead() -- interface() WITHOUT_DEVICE実行");
      result = true;
    }
    return (result);
  }

  /// 関数：plusPosCoGCaRead()
  /// 機能：CoGCaカード読取 処理実行
  /// 引数：PosCoGCaParam cogcaParam
  ///     ：Config vegaConf
  /// 戻値：false:通信が正常終了しなかった true:通信が正常終了
  bool plusPosCoGCaRead(PosCoGCaParam cogcaParam, Config vegaConf) {
    bool result;

    //外部関数（インターフェース）
    if (!isWithoutDevice()) {
      // PlusPosConnector.hに定義してある構造体のサイズ分領域確保
      Pointer<PosCoGCaParamStruct> cogcaParamStruct = calloc.allocate(posCoGCaParamSize);
      Pointer<ConfigStruct> vegaConfStruct = calloc.allocate(configSize);
      // 構造体へ変換
      cnvPosCoGCaParamToStruct(cogcaParam, cogcaParamStruct);
      cnvConfigToStruct(vegaConf, vegaConfStruct);

      final bool Function(Pointer<PosCoGCaParamStruct> cogcaParam,
              Pointer<ConfigStruct> vegaConf) interface =
          vega3000Dylib
              .lookup<
                  NativeFunction<
                      Bool Function(Pointer<PosCoGCaParamStruct>,
                          Pointer<ConfigStruct>)>>("PlusPosCoGCaRead")
              .asFunction();
      //APIコール
      result = interface(cogcaParamStruct, vegaConfStruct);
      cnvHeaderDataOutPut(cogcaParamStruct.ref.header, cogcaParam.header);
      cnvCardDataOutPut(cogcaParamStruct.ref.card, cogcaParam.card);
      cnvConfigOutPut(vegaConfStruct.ref, vegaConf);

      calloc.free(cogcaParamStruct);
      calloc.free(vegaConfStruct);
    } else {
      debugPrint(
          "FFIVega3000.plusPosCoGCaRead() -- interface() WITHOUT_DEVICE実行");
      result = true;
    }
    return (result);
  }

  /// 関数：endPlusPosCoGCaRead()
  /// 機能：CoGCaカード読取 処理終了
  /// 引数：PosCoGCaParam cogcaParam
  ///     ：Config vegaConf
  /// 戻値：false:通信が正常終了しなかった true:通信が正常終了
  bool endPlusPosCoGCaRead(PosCoGCaParam cogcaParam, Config vegaConf) {
    bool result;

    //外部関数（インターフェース）
    if (!isWithoutDevice()) {
      // PlusPosConnector.hに定義してある構造体のサイズ分領域確保
      Pointer<PosCoGCaParamStruct> cogcaParamStruct = calloc.allocate(posCoGCaParamSize);
      Pointer<ConfigStruct> vegaConfStruct = calloc.allocate(configSize);
      cnvPosCoGCaParamToStruct(cogcaParam, cogcaParamStruct);
      cnvConfigToStruct(vegaConf, vegaConfStruct);
      final bool Function(Pointer<PosCoGCaParamStruct> cogcaParam,
              Pointer<ConfigStruct> vegaConf) interface =
          vega3000Dylib
              .lookup<
                  NativeFunction<
                      Bool Function(Pointer<PosCoGCaParamStruct>,
                          Pointer<ConfigStruct>)>>("endPlusPosCoGCaRead")
              .asFunction();
      //APIコール
      result = interface(cogcaParamStruct, vegaConfStruct);
      cnvHeaderDataOutPut(cogcaParamStruct.ref.header, cogcaParam.header);
      cnvCardDataOutPut(cogcaParamStruct.ref.card, cogcaParam.card);
      cnvConfigOutPut(vegaConfStruct.ref, vegaConf);

      calloc.free(cogcaParamStruct);
      calloc.free(vegaConfStruct);
    } else {
      debugPrint(
          "FFIVega3000.endPlusPosCoGCaRead() -- interface() WITHOUT_DEVICE実行");
      result = true;
    }
    return (result);
  }

// Cancel
  /// 関数：registeredCallbackFunction()
  /// 機能：コールバック関数を登録する
  /// 引数：なし
  /// 戻値：false:関数登録が正常終了しなかった true:関数登録が正常終了
  /// 備考：ネイティブ層にコールバック関数を登録してもdart側の呼び出しができなかったため、
  /// 　　　dart側に関数を登録する。
  ///　　　　実際のコールバック関数の呼び出しは
  ///　　　　executeRegisteredCallbackFunctionで実行する
  bool registeredCallbackFunction(Function func) {
    callBackFunc = func;
    return true;
  }

  /// 関数：executeRegisteredCallbackFunction()
  /// 機能：コールバック関数を実行する
  /// 引数：なし
  /// 戻値：false:関数登録が正常終了しなかった true:関数登録が正常終了
  static bool executeRegisteredCallbackFunction() {
    return callBackFunc?.call();
  }

  /// 関数：plusPosRegisterCancelCallback()
  /// 機能：キャンセル用コールバック関数登録
  /// 引数：Function func
  ///     ：Config vegaConf
  /// 戻値：false:関数登録が正常終了しなかった true:関数登録が正常終了
  bool plusPosRegisterCancelCallback(Function func, Config vegaConf) {
    bool result;
    //外部関数（インターフェース）
    if (!isWithoutDevice()) {
      // Dartの関数comparからC言語の関数ポインタに変換
      Pointer<NativeFunction<NativeDummy>> funcPointer =
          Pointer.fromFunction(executeRegisteredCallbackFunction, false);

      // PlusPosConnector.hに定義してある構造体のサイズ分領域確保
      Pointer<ConfigStruct> vegaConfStruct = calloc.allocate(configSize);

      cnvConfigToStruct(vegaConf, vegaConfStruct);
      final bool Function(Pointer<NativeFunction<NativeDummy>> func,
              Pointer<ConfigStruct> vegaConf) interface =
          vega3000Dylib
              .lookup<
                      NativeFunction<
                          Bool Function(Pointer<NativeFunction<NativeDummy>>,
                              Pointer<ConfigStruct>)>>(
                  "PlusPosRegisterCancelCallback")
              .asFunction();
      //APIコール
      result = interface(funcPointer, vegaConfStruct);
      calloc.free(vegaConfStruct);
    } else {
      debugPrint(
          "FFIVega3000.plusPosRegisterCancelCallback() -- interface() WITHOUT_DEVICE実行");
      result = true;
    }
    return (result);
  }

// 内部関数
  /// 関数：cnvConfigToStruct()
  /// 機能：クラス変数から構造体に変換
  /// 引数：Config src
  ///     ：Pointer<ConfigStruct> dest
  /// 戻値：なし
  static void cnvConfigToStruct(Config src, Pointer<ConfigStruct> dest) {
    int i;

    dest.ref.svFlag = src.svFlag;
    dest.ref.swFlag = src.swFlag;
    for (i = 0; i < src.address.length; i++) {
      if (src.address[i].isEmpty) {
        break;
      }
      dest.ref.address[i] = src.address[i].codeUnitAt(0);
    }
    for (i = 0; i < src.addressSub.length; i++) {
      if (src.addressSub[i].isEmpty) {
        break;
      }
      dest.ref.addressSub[i] = src.addressSub[i].codeUnitAt(0);
    }
    dest.ref.port = src.port;
    dest.ref.portSub = src.portSub;
    dest.ref.recvTimeOut = src.recvTimeOut;
    dest.ref.connTimeOut = src.connTimeOut;
    dest.ref.retryCount = src.retryCount;
    dest.ref.logFlag = src.logFlag;
    for (i = 0; i < src.logFilePath.length; i++) {
      if (src.logFilePath[i].isEmpty) {
        break;
      }
      dest.ref.logFilePath[i] = src.logFilePath[i].codeUnitAt(0);
    }
    dest.ref.logSaveDate = src.logSaveDate;
    dest.ref.devFlag = src.devFlag;
    dest.ref.trainingModeFlag = src.trainingModeFlag;
    for (i = 0; i < src.comNo.length; i++) {
      if (src.comNo[i].isEmpty) {
        break;
      }
      dest.ref.comNo[i] = src.comNo[i].codeUnitAt(0);
    }
  }
